T954 T955 harden release staging evidence